tdf#68759 PPTX: Export IsMirrored

Change-Id: I6bab00f79f1cb122344e4bb9fd62eb4c48a1838b
Reviewed-on: https://gerrit.libreoffice.org/45808
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>